--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "express-ejs-layouts": "^2.5.1"
+    "express-ejs-layouts": "^2.5.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
