--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-dart-sass": "^1.0.4",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "passport": "^0.6.0",
