--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Social Media Website",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon index.js || node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,6 +30,7 @@
     "express-dart-sass": "^1.0.4",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "mongoose": "^6.9.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   }
