--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-dart-sass": "^1.0.4",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
