--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "uuid": "^9.0.0"
