--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/pritam1813/9oice#readme",
   "dependencies": {
     "aws-sdk": "^2.1310.0",
+    "bull": "^4.10.4",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
